a.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloapp
  labels:
    app: helloapp
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: helloapp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp-v1
  labels:
    app: helloapp
    version: v1
spec:
  selector:
    matchLabels:
      app: helloapp
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: helloapp
        version: v1
    spec:
      containers:
      - name: bookinfo
        image: labiesp/helloapp:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 80
