app.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloapp
  labels:
    app: helloapp
spec:
  ports:
  - name: http
    port: 8081
    targetPort: 8001
  selector:
    app: helloapp
---
apiVersion: networking.istio.io/v1alpha3 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: helloapp-v1
  labels:
    app: helloapp
    version: v1
spec:
  selector:
    matchLabels:
      app: helloapp
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: helloapp
        version: v1
    spec:
      containers:
      - name: bookinfo
        image: labiesp/helloapp:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
