helloapp.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloapp1
  labels:
    app: helloapp1
spec:
  replicas: 1
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: helloapp1
        version: white
    spec:
      containers:
        - image: labiesp/helloapp:1.0.0
          imagePullPolicy: Always
          name: helloapp1
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: helloapp1
  labels:
    app: helloapp1
spec:
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  selector:
    app: helloapp1
