n.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  ports:
  - name: http
    port: 32210
    targetPort: 32210
  selector:
    app: nginx
