nv2.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx1
  labels:
    app: nginx1
spec:
  type: NodePort
  ports:
  - port: 443
    name: https
  selector:
    app: nginx1
